set up auto generated models and endpoints

--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -9,6 +9,7 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
+  <h2 (click)="test()">test</h2>
   <li>
     <h2><a href="https://angular.io/tutorial" rel="noopener" target="_blank">Tour of Heroes</a></h2>
   </li>
