--- a/web/src/app/app.component.html
+++ b/web/src/app/app.component.html
@@ -1,11 +1,5 @@
-<div class="container">
-  <ul class="nav nav-pills">
-    <li><a routerLink="/home" routerLinkActive="active">Home</a></li>
-    <li><a routerLink="/login" routerLinkActive="active">Login</a></li>
-    <li><a (click)="logout()">Logout</a></li>
-  </ul>
-</div>
+<app-nav-bar style="width: 100%;"></app-nav-bar>
+
 <div class="container">
   <router-outlet></router-outlet>
 </div>
-  <h2 (click)="test()">test</h2>
