--- a/web/src/app/login/login.component.html
+++ b/web/src/app/login/login.component.html
@@ -1,6 +1,6 @@
-<div [hidden]="!error" class="alert alert-danger">
-  There was a problem logging in. Please try again.
-</div>
+<!--<div [hidden]="!error" class="alert alert-danger">-->
+<!--  There was a problem logging in. Please try again.-->
+<!--</div>-->
 <form (submit)="login()" role="form">
   <div class="form-group">
     <label for="username">Username:</label> <input [(ngModel)]="credentials.username"
