fix hibernate issue

--- a/web/src/app/admin/admin.component.html
+++ b/web/src/app/admin/admin.component.html
@@ -50,13 +50,26 @@
 
               <mat-list *ngIf="teams">
                 <mat-list-item *ngFor="let team of teams ">
-                  {{team?.id}}: {{team?.name}}
+                  {{team?.id}}: {{team?.name}}:({{team.role}})
                   <button (click)="deleteTeamById(team.id)" color="warn" mat-raised-button>delete</button>
                 </mat-list-item>
               </mat-list>
 
               <mat-form-field>
                 <input formControlName="name" matInput placeholder="Team Name">
+              </mat-form-field>
+
+              <mat-form-field>
+                <mat-label>Role</mat-label>
+                <mat-select formControlName="role">
+                  <mat-option value="ROLE_team_1">team_1</mat-option>
+                  <mat-option value="ROLE_team_2">team_2</mat-option>
+                  <mat-option value="ROLE_team_3">team_3</mat-option>
+                  <mat-option value="ROLE_team_4">team_4</mat-option>
+                  <mat-option value="ROLE_team_5">team_5</mat-option>
+                  <mat-option value="ROLE_team_6">team_6</mat-option>
+                  <mat-option value="ROLE_admin">admin</mat-option>
+                </mat-select>
               </mat-form-field>
               <button (click)="newTeam()" color="primary" mat-raised-button>New Team</button>
             </form>
