--- a/web/src/app/admin/edit-course/edit-course.component.html
+++ b/web/src/app/admin/edit-course/edit-course.component.html
@@ -8,4 +8,6 @@
     </mat-list-item>
   </mat-list>
   <app-get-gps (newGps)="getGps($event)"></app-get-gps>
+  <button (click)="saveCourse()" color="accent" mat-raised-button>Save Course</button>
+
 </div>
