--- a/web/src/app/home/home.component.html
+++ b/web/src/app/home/home.component.html
@@ -1,4 +1,22 @@
 <p>
-  home works!
+  Hi {{user?.name}}, {{user?.authorities[0].authority}}
 </p>
 
+<mat-card *ngIf="team && !run">
+  <form [formGroup]="selectRun">
+    <mat-form-field>
+      <mat-label>Courses</mat-label>
+      <mat-select formControlName="run">
+        <mat-option *ngFor="let run of team.runs" [value]="run">
+          {{run?.course.name}}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+    <button (click)="startRun()" color="primary" mat-raised-button>Edit</button>
+  </form>
+  <app-run></app-run>
+</mat-card>
+
+<mat-card *ngIf="team && !run">
+  <app-course [run]="run"></app-course>
+</mat-card>
