Add the ability for teams to guess location

--- a/web/src/app/course/course.component.html
+++ b/web/src/app/course/course.component.html
@@ -1,6 +1,10 @@
 <span *ngIf="run">
-<div *ngFor="let target of run.course.targets">
-  <app-gps [gps]="target"></app-gps>
+<div *ngFor="let guess of run.guessList; let i = index">
+
+<app-guess [guess]="guess" [index]="i"></app-guess>
+
+
+
   <mat-divider></mat-divider>
 </div>
 </span>
