--- a/web/src/app/get-gps/get-gps.component.html
+++ b/web/src/app/get-gps/get-gps.component.html
@@ -1,5 +1,6 @@
 <div class="row">
-  <app-gps [gps]="gps"></app-gps>
-  <button (click)="getGps()" color="primary" mat-raised-button>Update</button>
-  <button (click)="saveGps()" [disabled]="!gps.latitude" color="accent" mat-raised-button>save</button>
+  <app-gps [gps]="gps" class="col-12"></app-gps>
+  <button (click)="getGps()" class="col-4" color="primary" mat-raised-button>Update</button>
+  <button (click)="saveGps()" [disabled]="!gps.latitude" class="col-4" color="accent" mat-raised-button>save</button>
+  accuracy: {{accuracy}}
 </div>
