--- a/web/src/app/gps/gps.component.html
+++ b/web/src/app/gps/gps.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="gps" CLASS="well">
+<div *ngIf="gps">
   <span *ngIf="gps.latitude">lat: {{gps.latitude}}</span>
   <br>
   <span *ngIf="gps.longitude">lon: {{gps.longitude}}</span>
