--- a/web/src/app/admin/admin.component.html
+++ b/web/src/app/admin/admin.component.html
@@ -133,5 +133,8 @@
         <app-edit-course *ngIf="coursesToEdit" [course]="coursesToEdit"></app-edit-course>
       </div>
     </mat-tab>
+    <mat-tab label="Scorers">
+      <app-run-scorers></app-run-scorers>
+    </mat-tab>
   </mat-tab-group>
 </mat-card>
