--- a/web/src/app/admin/admin.component.html
+++ b/web/src/app/admin/admin.component.html
@@ -68,7 +68,11 @@
                   <mat-option value="ROLE_team_4">team_4</mat-option>
                   <mat-option value="ROLE_team_5">team_5</mat-option>
                   <mat-option value="ROLE_team_6">team_6</mat-option>
-                  <mat-option value="ROLE_admin">admin</mat-option>
+                 <mat-option value="ROLE_team_">team_c</mat-option>
+                 <mat-option value="ROLE_team_">team_david</mat-option>
+                  <mat-option value="ROLE_team_">team_m</mat-option>
+                  <mat-option value="ROLE_team_">team_n</mat-option>
+                    <mat-option value="ROLE_admin">admin</mat-option>
                 </mat-select>
               </mat-form-field>
               <button (click)="newTeam()" color="primary" mat-raised-button>New Team</button>
